--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -12,3 +12,7 @@
   }
 </ul>
 <a href="/items/new">Add a new item</a>
+
+<form action="/items/delete" method="post">
+  <button type="submit">Clear All Items</button>
+</form>
