--- a/ToDoList/Views/Home/index.cshtml
+++ b/ToDoList/Views/Home/index.cshtml
@@ -1,3 +1,8 @@
-<h1>Welcome to the To Do List!</h1>
-<h3><a href="/categories">View categories</a></h3>
-<h3><a href="/categories/new">Add a new category</a></h3>
+<head>
+  <link rel="stylesheet" type="text/css" href="~/css/styles.css" />
+</head>
+<body>
+  <h1>Welcome to the To Do List!</h1>
+  <h3><a href="/categories">View categories</a></h3>
+  <h3><a href="/categories/new">Add a new category</a></h3>
+</body>
