--- a/ToDoList/wwwroot/css/styles.css
+++ b/ToDoList/wwwroot/css/styles.css
@@ -1,3 +1,14 @@
 h1 {
   color: red;
 }
+
+div#footer
+{
+  position:fixed;
+  bottom:0px;
+  left:0px;
+  width:100%;
+  color: #ccc;;
+  background:#333;
+  padding:8px;
+}
