--- a/ToDoList/Views/Home/index.cshtml
+++ b/ToDoList/Views/Home/index.cshtml
@@ -2,4 +2,4 @@
   Layout = "_Layout";
 }
 <h1>Welcome to the To Do List!</h1>
-<p>@Html.ActionLink("See all items", "Index", "Items")</p>>
+<p>@Html.ActionLink("See all items", "Index", "Items")</p>
