--- a/ToDoList/Views/Items/Delete.cshtml
+++ b/ToDoList/Views/Items/Delete.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Are you sure you want to delete this?</h2>
 
-@Html.DisplayNameFor(model = Model.Description): @Html.DisplayFor(model => model.Description)
+@Html.DisplayNameFor(model => Model.Description): @Html.DisplayFor(model => model.Description)
 @using (Html.BeginForm())
 {
   <input type="submit" value="Delete" />
