--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -7,6 +7,11 @@
 
 <h1>Items</h1>
 
+@if (Model.Count == 0)
+{
+  <p>Sorry, no items have been added yet. :(</p>
+}
+
 <ul>
   @foreach (Item item in Model)
   {
