--- a/ToDoList/Views/Categories/Delete.cshtml
+++ b/ToDoList/Views/Categories/Delete.cshtml
@@ -2,11 +2,11 @@
   Layout = "_Layout";
 }
 
-@model ToDoList.Models.Item
+@model ToDoList.Models.Category
 
 <h2>Are you sure you want to delete this?</h2>
 
-@Html.DisplayNameFor(model => Model.Description): @Html.DisplayFor(model => model.Description)
+@Html.DisplayNameFor(model => Model.Name): @Html.DisplayFor(model => Model.Name)
 @using (Html.BeginForm())
 {
   <input type="submit" value="Delete" />
