Setup category functionality
Co-authored-by: Cat Denton <Cat-Denton@users.noreply.github.com>

--- a/ToDoList/Views/Items/Edit.cshtml
+++ b/ToDoList/Views/Items/Edit.cshtml
@@ -10,10 +10,13 @@
 
 @using (Html.BeginForm())
 {
-  @Html.HiddenFor(model => model.ItemId);
+  @Html.HiddenFor(model => model.ItemId)
 
-  @Html.LabelFor(model => model.Description);
-  @Html.EditorFor(model => model.Description);
+  @Html.LabelFor(model => model.Description)
+  @Html.EditorFor(model => model.Description)
+
+  @Html.LabelFor(model => model.Category)
+  @Html.DropDownList("CategoryId")
 
   <input type="submit" value="Save" />
 }
