--- a/ToDoList/Views/Categories/Details.cshtml
+++ b/ToDoList/Views/Categories/Details.cshtml
@@ -3,10 +3,18 @@
 }
 
 @model ToDoList.Models.Category;
+@using ToDoList.Models;
 
 <h2>Category Details</h2>
 <hr />
-<h3>@Html.DisplayNameFor(model => model.Name)</h3>
+<h3>@Html.DisplayFor(model => model.Name)</h3>
+<ul>
+@foreach(Item item in Model.Items)
+{
+  @* <li>@Html.DisplayFor(model => item.Description)</li> *@
+  <li>@item.Description</li>
+}
+</ul>
 <p>@Html.ActionLink("Back to list", "Index")</p>
 <p>@Html.ActionLink("Edit Category", "Edit", new { id = Model.CategoryId })</p>
 <p>@Html.ActionLink("Delete Category", "Delete", new { id = Model.CategoryId })</p>
