--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -15,8 +15,9 @@
 <ul>
   @foreach (Item item in Model)
   {
-    <li>@Html.ActionLink($"{item.Description}", "Details", new { id = item.ItemId })</li>
+    <li>@Html.ActionLink($"{item.Description}", "Details", new { id = item.ItemId }) | @item.Category.Name</li>
   }
 </ul>
 
 <p>@Html.ActionLink("Add new Item", "Create")</p>
+<p>@Html.ActionLink("Return to home page", "Index", "Home")</p>
