Add link to item details from category list
Co-authored-by: Cat Denton <Cat-Denton@users.noreply.github.com>
Co-authored-by: Karlson Drendel <kdrendel99@users.noreply.github.com>

--- a/ToDoList/Views/Categories/Details.cshtml
+++ b/ToDoList/Views/Categories/Details.cshtml
@@ -12,7 +12,7 @@
 @foreach(Item item in Model.Items)
 {
   @* <li>@Html.DisplayFor(model => item.Description)</li> *@
-  <li>@item.Description</li>
+  <li>@Html.ActionLink(item.Description, "Details", "Items", new {id = item.ItemId})</li>
 }
 </ul>
 <p>@Html.ActionLink("Back to list", "Index")</p>
