--- a/ToDoList/Views/Categories/Index.cshtml
+++ b/ToDoList/Views/Categories/Index.cshtml
@@ -1,4 +1,4 @@
-@{
+@* @{
   Layout = "_Layout";
 }
 
@@ -20,4 +20,4 @@
 </ul>
 
 <p>@Html.ActionLink("Add a new Category", "Create")</p>
-<p>@Html.ActionLink("Return to home page", "Index", "Home")</p>
+<p>@Html.ActionLink("Return to home page", "Index", "Home")</p> *@
