--- a/ToDoList/Views/Items/Create.cshtml
+++ b/ToDoList/Views/Items/Create.cshtml
@@ -1,4 +1,4 @@
-@{
+@* @{
   Layout = "_Layout";
 }
 
@@ -15,4 +15,4 @@
 
   <input type="submit" value="Add new task" />
 }
-<p>@Html.ActionLink("Show all items", "Index")</p>
+<p>@Html.ActionLink("Show all items", "Index")</p> *@
