Add READ functionality to Items Controller
Co-authored-by: Saoud Rana <saoud@saoud.dev>

--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -1,4 +1,4 @@
-@* @{
+@{
   Layout = "_Layout";
 }
 
@@ -15,9 +15,9 @@
 <ul>
   @foreach (Item item in Model)
   {
-    <li>@Html.ActionLink($"{item.Description}", "Details", new { id = item.ItemId }) | @item.Category.Name</li>
+    <li>@Html.ActionLink($"{item.Description}", "Details", new { id = item.ItemId }) </li>
   }
 </ul>
 
 <p>@Html.ActionLink("Add new Item", "Create")</p>
-<p>@Html.ActionLink("Return to home page", "Index", "Home")</p> *@
+<p>@Html.ActionLink("Return to home page", "Index", "Home")</p>
