Add UPDATE functionality and set up Categories
Co-authored-by: Saoud Rana <saoud@saoud.dev>

--- a/ToDoList/Views/Categories/Details.cshtml
+++ b/ToDoList/Views/Categories/Details.cshtml
@@ -1,20 +1,20 @@
-@* @{
+@{
   Layout = "_Layout";
 }
 
 @model ToDoList.Models.Category;
-@using ToDoList.Models;
+@* @using ToDoList.Models; *@
 
 <h2>Category Details</h2>
 <hr />
 <h3>@Html.DisplayFor(model => model.Name)</h3>
 <ul>
-@foreach(Item item in Model.Items)
+@foreach(var join in Model.JoinEntities)
 {
-  <li>@Html.DisplayFor(model => item.Description)</li>
-  <li>@Html.ActionLink(item.Description, "Details", "Items", new {id = item.ItemId})</li>
+  <li>@Html.ActionLink(join.Item.Description, "Details", "Items", new {id = join.Item.ItemId})</li>
 }
 </ul>
 <p>@Html.ActionLink("Back to list", "Index")</p>
+<p>@Html.ActionLink("Add Item to Category", "AddItem")</p>
 <p>@Html.ActionLink("Edit Category", "Edit", new { id = Model.CategoryId })</p>
-<p>@Html.ActionLink("Delete Category", "Delete", new { id = Model.CategoryId })</p> *@
+<p>@Html.ActionLink("Delete Category", "Delete", new { id = Model.CategoryId })</p>
