--- a/ToDoList/Views/Categories/Create.cshtml
+++ b/ToDoList/Views/Categories/Create.cshtml
@@ -1,4 +1,4 @@
-@* @{
+@{
   Layout = "_Layout";
 }
 
@@ -9,6 +9,9 @@
 {
   @Html.LabelFor(model => model.Name)
   @Html.TextBoxFor(model => model.Name)
+
+  @Html.Label("Select item")
+  @Html.DropDownList("ItemId")
   <input type="submit" value="Add new category" />
 }
-<p>@Html.ActionLink("Show all categories", "Index")</p> *@
+<p>@Html.ActionLink("Show all categories", "Index")</p>
