--- a/ToDoList/Views/Categories/Edit.cshtml
+++ b/ToDoList/Views/Categories/Edit.cshtml
@@ -1,4 +1,4 @@
-@* @{
+@{
   Layout = "_Layout";
 }
 
@@ -14,6 +14,8 @@
   @Html.LabelFor(model => model.Name);
   @Html.EditorFor(model => model.Name);
 
+  @Html.Label("Select item")
+  @Html.DropDownList("ItemId")
   <input type="submit" value="Save" />
 }
-<p>@Html.ActionLink("Back to list", "Index")</p> *@
+<p>@Html.ActionLink("Back to list", "Index")</p>
