Add DELETE functionality
Co-authored-by: Saoud Rana <saoud@saoud.dev>

--- a/ToDoList/Views/Items/Details.cshtml
+++ b/ToDoList/Views/Items/Details.cshtml
@@ -18,6 +18,11 @@ else
   @foreach(var join in Model.JoinEntities)
   {
     <li>@Html.ActionLink(@join.Category.Name, "Details", "Categories", new {id = join.Category.CategoryId})</li>
+    @using (Html.BeginForm("DeleteCategory", "Items"))
+    {
+      @Html.Hidden("joinId", @join.CategoryItemId)
+      <input type="submit" value="Delete"/>
+    }
   }
   </ul>
 }
