--- a/ToDoList/Views/Items/Delete.cshtml
+++ b/ToDoList/Views/Items/Delete.cshtml
@@ -1,14 +1,14 @@
-@* @{
+@{
   Layout = "_Layout";
 }
 
 @model ToDoList.Models.Item
 
-<h2>Are you sure you want to delete this?</h2>
+<h2>Are you sure you want to delete this Item?</h2>
 
-@Html.DisplayNameFor(model => Model.Description): @Html.DisplayFor(model => model.Description)
+@Html.DisplayNameFor(model => model.Description): @Html.DisplayFor(model => model.Description)
 @using (Html.BeginForm())
 {
-  <input type="submit" value="Delete" />
+    <input type="submit" value="Delete" />
 }
-<p>@Html.ActionLink("Back to List", "Index");</p> *@
+@Html.ActionLink("Back to List", "Index")
