--- a/ToDoList/Views/Items/Index.cshtml
+++ b/ToDoList/Views/Items/Index.cshtml
@@ -3,21 +3,24 @@
 }
 
 @using ToDoList.Models;
-@model List<ToDoList.Models.Item>;
+@model IEnumerable<ToDoList.Models.Item>;
 
-<h1>Items</h1>
+<h1>Items for @User.Identity.Name</h1>
 
-@if (Model.Count == 0)
-{
+@if (Model.Any())
+{ 
   <p>Sorry, no items have been added yet. :(</p>
+  <ul>
+    @foreach (Item item in Model)
+    {
+      <li>@Html.ActionLink($"{item.Description}", "Details", new { id = item.ItemId }) </li>
+    }
+  </ul>
 }
-
-<ul>
-  @foreach (Item item in Model)
-  {
-    <li>@Html.ActionLink($"{item.Description}", "Details", new { id = item.ItemId }) </li>
-  }
-</ul>
+else
+{
+  <h3>No items have been added yet!</h3>
+}
 
 <p>@Html.ActionLink("Add new Item", "Create")</p>
 <p>@Html.ActionLink("Return to home page", "Index", "Home")</p>
